refactor: add path filters for build workflows of evilwoods-cloud and evilwoods-desktop

--- a/.github/workflows/build-evilwoods-cloud.yml
+++ b/.github/workflows/build-evilwoods-cloud.yml
@@ -5,6 +5,8 @@ on:
     - cron: "21 21 * * *"
   push:
     branches: ["main"]
+    paths:
+      - "bootc/evilwoods-cloud/**"
 
 env:
   REGISTRY: ghcr.io
