--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -6,12 +6,12 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "bootc/evilwoods-cloud/**"
+      - "bootc/evilwoods-server/**"
   workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: "evilwoods-cloud"
+  IMAGE_NAME: "evilwoods-server"
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
@@ -27,7 +27,7 @@ jobs:
       - name: Build container image
         uses: redhat-actions/buildah-build@v2.13
         with:
-          context: "bootc/evilwoods-server"
+          context: "./bootc/evilwoods-server"
           containerfiles: Containerfile
           image: ${{ env.IMAGE_NAME }}
           layers: false
