refactor: update containerfile path in evilwoods-server build workflow

--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -28,7 +28,7 @@ jobs:
         uses: redhat-actions/buildah-build@v2.13
         with:
           context: "./bootc/evilwoods-server"
-          containerfiles: Containerfile
+          containerfiles: ./bootc/evilwoods-server/Containerfile
           image: ${{ env.IMAGE_NAME }}
           layers: false
           oci: true
