--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Build container image
         uses: redhat-actions/buildah-build@v2.13
         with:
-          context: "bootc/evilwoods-desktop"
-          containerfiles: Containerfile
+          context: "./bootc/evilwoods-desktop"
+          containerfiles: "./bootc/evilwoods-desktop/Containerfile"
           image: ${{ env.IMAGE_NAME }}
           layers: false
           oci: true
