--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -40,7 +40,7 @@ jobs:
         uses: redhat-actions/push-to-registry@v2.6
         with:
           image: ${{ env.IMAGE_NAME }}
-          tags: "latest"
+          tags: latest ${{ github.sha }}
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
