--- a/bootc/evilwoods-desktop/Containerfile
+++ b/bootc/evilwoods-desktop/Containerfile
@@ -1,9 +1,13 @@
 FROM quay.io/fedora/fedora-silverblue:41
 RUN \
+    dnf -y config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo && \
     dnf -y install \
     # run local qemu vms
     # libvirt-daemon-config-network libvirt-daemon-kvm qemu-kvm \
     # virt-install virt-manager virt-viewer \
     # preffered tools
-    fish neovim && \
-    dnf clean all
+    fish neovim tailscale && \
+    dnf -y remove firefox firefox-langpacks && \
+    dnf -y clean all
+
+RUN ln -s /usr/lib/systemd/system/tailscaled.service /usr/lib/systemd/system/multi-user.target.wants/
