--- a/.github/workflows/build-evilwoods-desktop.yml
+++ b/.github/workflows/build-evilwoods-desktop.yml
@@ -28,19 +28,21 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Build container image
+        id: build-image
         uses: redhat-actions/buildah-build@v2.13
         with:
           context: "./bootc/evilwoods-desktop"
           containerfiles: "./bootc/evilwoods-desktop/Containerfile"
           image: ${{ env.IMAGE_NAME }}
+          tags: latest ${{ github.sha }}
           layers: false
           oci: true
 
       - name: Push to ghcr.io
         uses: redhat-actions/push-to-registry@v2.6
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: latest
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
