--- a/bootc/evilwoods-desktop/Containerfile
+++ b/bootc/evilwoods-desktop/Containerfile
@@ -3,6 +3,7 @@ FROM quay.io/fedora/fedora-silverblue:41
 COPY config/usr /usr
 RUN \
     dnf -y config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo && \
+    dnf -y copr enable pgdev/ghostty && \
     dnf -y install \
     # run local qemu vms
     # libvirt-daemon-config-network libvirt-daemon-kvm qemu-kvm \
