--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -1,4 +1,6 @@
 FROM quay.io/centos-bootc/centos-bootc:stream10
+
+COPY config/usr /usr
 RUN \
   ## Add vscode repo and key
   dnf -y install epel-release && \
