--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -1,5 +1,6 @@
 FROM quay.io/centos-bootc/centos-bootc:stream10
 RUN \
   ## Add vscode repo and key
-  dnf -y install epel-release qemu-guest-agent fish && \
+  dnf -y install epel-release && \
+  dnf -y install fish qemu-guest-agent && \
   dnf clean all
