--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -1,6 +1,5 @@
 FROM quay.io/centos-bootc/centos-bootc:stream10
 RUN \
-    ## Add vscode repo and key
-    dnf -y install epel-release && \
-    dnf -y install fish && \
-    dnf clean all
+  ## Add vscode repo and key
+  dnf -y install epel-release qemu-guest-agent fish && \
+  dnf clean all
