--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -7,4 +7,5 @@ RUN \
     dnf -y install fish qemu-guest-agent firewalld cockpit && \
     dnf clean all
 
-RUN curl --proto '=https' --tlsv1.2 -LsSf https://setup.atuin.sh | sh
+RUN TARGET_DIR=/opt/xonsh-env PYTHON_VER=3.12 \
+    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/anki-code/xonsh-install/main/mamba-install-xonsh.sh)"
