--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -2,7 +2,9 @@ FROM quay.io/centos-bootc/centos-bootc:stream10
 
 COPY config/usr /usr
 RUN \
-  ## Add vscode repo and key
-  dnf -y install epel-release && \
-  dnf -y install fish qemu-guest-agent firewalld cockpit && \
-  dnf clean all
+    ## Add vscode repo and key
+    dnf -y install epel-release && \
+    dnf -y install fish qemu-guest-agent firewalld cockpit && \
+    dnf clean all
+
+RUN curl --proto '=https' --tlsv1.2 -LsSf https://setup.atuin.sh | sh
