--- a/bootc/evilwoods-desktop/Containerfile
+++ b/bootc/evilwoods-desktop/Containerfile
@@ -4,12 +4,7 @@ COPY config/usr /usr
 RUN \
   dnf -y config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo && \
   dnf -y copr enable pgdev/ghostty && \
-  dnf -y install \
-  # run local qemu vms
-  # libvirt-daemon-config-network libvirt-daemon-kvm qemu-kvm \
-  # virt-install virt-manager virt-viewer \
-  # preffered tools
-  fish neovim tailscale ghostty ripgrep fd-find bat && \
+  dnf -y install fish neovim tailscale ghostty ripgrep fd-find bat && \
   dnf -y remove firefox firefox-langpacks && \
   dnf -y clean all
 
