--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -11,19 +11,19 @@ RUN xonsh install-binaries.xsh
 
 FROM quay.io/centos-bootc/centos-bootc:stream10
 
-COPY ../common-config/usr config/usr /
+COPY config/usr /usr
 
 RUN \
-  ## Add vscode repo and key
-  dnf config-manager -y --add-repo https://pkgs.tailscale.com/stable/centos/10/tailscale.repo && \
-  dnf -y install epel-release && \
-  dnf -y install fish qemu-guest-agent firewalld cockpit tailscale && \
-  dnf clean all
+    ## Add vscode repo and key
+    dnf config-manager -y --add-repo https://pkgs.tailscale.com/stable/centos/10/tailscale.repo && \
+    dnf -y install epel-release && \
+    dnf -y install fish qemu-guest-agent firewalld cockpit tailscale && \
+    dnf clean all
 
 RUN TARGET_DIR=/opt/xonsh-env PYTHON_VER=3.12 \
-  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/anki-code/xonsh-install/main/mamba-install-xonsh.sh)"
+    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/anki-code/xonsh-install/main/mamba-install-xonsh.sh)"
 
 COPY --from=builder /app/usr /usr
 
 RUN mkdir -p /usr/etc/systemd/system/multi-user.target.wants && \
-  ln -s /usr/lib/systemd/system/tailscaled.service /usr/etc/systemd/system/multi-user.target.wants/tailscaled.service
+    ln -s /usr/lib/systemd/system/tailscaled.service /usr/etc/systemd/system/multi-user.target.wants/tailscaled.service
