--- a/bootc/evilwoods-desktop/Containerfile
+++ b/bootc/evilwoods-desktop/Containerfile
@@ -5,11 +5,8 @@ COPY config/usr /usr
 RUN \
     dnf -y config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo && \
     dnf -y copr enable pgdev/ghostty && \
-    dnf -y install fish neovim tailscale ghostty ripgrep fd-find bat && \
+    dnf -y install fish neovim tailscale ghostty ripgrep fd-find bat xonsh && \
     dnf -y remove firefox firefox-langpacks && \
     dnf -y clean all
-
-RUN TARGET_DIR=/var/opt/xonsh-env PYTHON_VER=3.12 \
-    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/anki-code/xonsh-install/main/mamba-install-xonsh.sh)"
 
 RUN ln -s /usr/lib/systemd/system/tailscaled.service /usr/lib/systemd/system/multi-user.target.wants/
