--- a/bootc/evilwoods-server/Containerfile
+++ b/bootc/evilwoods-server/Containerfile
@@ -6,7 +6,7 @@ RUN \
     ## Add tailscale repo and key
     dnf config-manager -y --add-repo https://pkgs.tailscale.com/stable/centos/10/tailscale.repo && \
     dnf -y install epel-release && \
-    dnf -y install fish qemu-guest-agent firewalld cockpit cockpit-podman cockpit-ostree tailscale unzip wget && \
+    dnf -y install rsync fish qemu-guest-agent firewalld cockpit cockpit-podman cockpit-ostree tailscale unzip wget && \
     dnf clean all
 
 WORKDIR /tmp
