change container-runner home dir

--- a/bootc/evilwoods-server/config/usr/etc/sysusers.d/container-runner.conf
+++ b/bootc/evilwoods-server/config/usr/etc/sysusers.d/container-runner.conf
@@ -1,1 +1,1 @@
-u container-runner - "User for running containers" /var/lib/storage /usr/bin/bash
+u container-runner - "User for running containers" /var/lib/storage/data /usr/bin/bash
