--- a/bootc/evilwoods-server/config/usr/etc/tmpfiles.d/storage-directory.conf
+++ b/bootc/evilwoods-server/config/usr/etc/tmpfiles.d/storage-directory.conf
@@ -1,1 +1,2 @@
-d /var/lib/storage 0700 container-runner container-runner
+d /var/lib/storage 0755 root root
+d /var/lib/storage/data 0700 container-runner container-runner
