--- a/.github/workflows/build-evilwoods-server.yml
+++ b/.github/workflows/build-evilwoods-server.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "bootc/evilwoods-server/**"
+      - "evilwoods-server/bootc/**"
   workflow_dispatch:
 
 env:
@@ -29,8 +29,8 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2.13
         with:
-          context: "./bootc/evilwoods-server"
-          containerfiles: "./bootc/evilwoods-server/Containerfile"
+          context: "./evilwoods-server/bootc"
+          containerfiles: "./evilwoods-server/bootc/Containerfile"
           image: ${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
           layers: false
