--- a/evilwoods-desktop/bootc/Containerfile
+++ b/evilwoods-desktop/bootc/Containerfile
@@ -4,8 +4,8 @@ COPY config/usr /usr
 
 RUN \
     dnf -y config-manager addrepo --from-repofile=https://pkgs.tailscale.com/stable/fedora/tailscale.repo && \
-    dnf -y copr enable pgdev/ghostty && \
-    dnf -y install fish neovim tailscale ghostty ripgrep fd-find bat xonsh && \
+    # dnf -y copr enable pgdev/ghostty && dnf -y install ghostty && \
+    dnf -y install fish neovim tailscale ripgrep fd-find bat && \
     dnf -y remove firefox firefox-langpacks && \
     dnf -y clean all
 
