--- a/evilwoods-server/bootc/Containerfile
+++ b/evilwoods-server/bootc/Containerfile
@@ -2,12 +2,17 @@ FROM quay.io/centos-bootc/centos-bootc:stream10
 
 COPY ./config/usr /usr
 
-RUN \
-    ## Add tailscale repo and key
-    dnf config-manager -y --add-repo https://pkgs.tailscale.com/stable/centos/10/tailscale.repo && \
-    dnf -y install epel-release && \
-    dnf -y install rsync fish qemu-guest-agent firewalld cockpit cockpit-podman cockpit-ostree tailscale unzip wget && \
-    dnf clean all
+RUN <<EOF
+set -euo pipefail
+
+dnf -y install epel-release
+dnf -y install rsync fish qemu-guest-agent firewalld cockpit cockpit-podman cockpit-ostree unzip wget
+dnf config-manager -y --add-repo https://pkgs.tailscale.com/stable/centos/10/tailscale.repo
+dnf -y install tailscale
+dnf config-manager -y --add-repo https://pkg.cloudflare.com/cloudflared-ascii.repo
+dnf -y install cloudflared
+dnf clean all
+EOF
 
 WORKDIR /tmp
 
