move tasks to roles from single playbook

--- a/evilwoods-server/ansible/inventory.yml
+++ b/evilwoods-server/ansible/inventory.yml
@@ -1,4 +1,4 @@
-evilcloud:
+evilwoods:
   hosts:
-    evilcloud_ts:
-      ansible_host: 100.92.124.86
+    evilcloud:
+      ansible_host: evilcloud-test
