rename nextcloud config

--- a/evilwoods-server/ansible/roles/nextcloud/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/nextcloud/tasks/main.yml
@@ -32,6 +32,6 @@
 - name: Render nextcloud config.php
   ansible.builtin.template:
     src: nextcloud-config.php.j2
-    dest: "{{ nextcloud_config_volume }}/config.php"
+    dest: "{{ nextcloud_config_volume }}/evilwoods.config.php"
     mode: "0644"
   notify: Restart nextcloud
