--- a/evilwoods-server/ansible/roles/common/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/common/tasks/main.yml
@@ -1,1 +1,7 @@
-
+- name: Render evilcloud network quadlet
+  ansible.builtin.template:
+    src: evilcloud.network.j2
+    dest: "{{ evilwoods_quadlet_path }}/evilcloud.network"
+    owner: "{{ evilwoods_runner_user }}"
+    group: "{{ evilwoods_runner_user }}"
+    mode: '0644'
