--- a/evilwoods-server/ansible/roles/ntfy/vars/main.yml
+++ b/evilwoods-server/ansible/roles/ntfy/vars/main.yml
@@ -1,3 +1,3 @@
 ntfy_app_name: "{{ ansible_role_name }}"
-ntfy_port: "{{ evilwoods_ntfy_port }}"
+ntfy_port: 80
 ntfy_url: "http://ntfy.{{ evilwoods_domain_name }}"
