change jinja file extension

--- a/evilwoods-server/ansible/roles/caddy/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/caddy/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Copy global configuration file
   ansible.builtin.template:
-    src: "global.caddyfile.j2"
+    src: "global.caddyfile.jinja"
     dest: "{{ evilwoods_caddy_volume_config_path }}/global.caddyfile"
     owner: "{{ evilwoods_runner_user }}"
     group: "{{ evilwoods_runner_user }}"
@@ -26,7 +26,7 @@
 
 - name: Copy Caddy service quadlet file
   ansible.builtin.template:
-    src: "caddy.container.j2"
+    src: "caddy.container.jinja"
     dest: "{{ evilwoods_quadlet_path }}/caddy.container"
     owner: "{{ evilwoods_runner_user }}"
     group: "{{ evilwoods_runner_user }}"
@@ -35,7 +35,7 @@
 
 - name: Copy Caddy data volume file
   ansible.builtin.template:
-    src: "caddy_data.volume.j2"
+    src: "caddy_data.volume.jinja"
     dest: "{{ evilwoods_quadlet_path }}/caddy_data.volume"
     owner: "{{ evilwoods_runner_user }}"
     group: "{{ evilwoods_runner_user }}"
