--- a/evilwoods-server/ansible/roles/kitchenowl/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/kitchenowl/tasks/main.yml
@@ -6,21 +6,21 @@
 
 - name: Render kitchenowl quadlet file
   ansible.builtin.template:
-    src: kitchenowl.container.j2
+    src: kitchenowl.container.jinja
     dest: "{{ evilwoods_quadlet_path }}/kitchenowl.container"
     mode: "0644"
   notify: Restart kitchenowl
 
 - name: Render kitchenowl secret retrieval unit file
   ansible.builtin.template:
-    src: kitchenowl-get-secrets.service.j2
+    src: kitchenowl-get-secrets.service.jinja
     dest: "{{ evilwoods_runner_unit_file_path }}/kitchenowl-get-secrets.service"
     mode: "0644"
   notify: Restart kitchenowl
 
 - name: Render kitchenowl caddyfile
   ansible.builtin.template:
-    src: kitchenowl.caddyfile.j2
+    src: kitchenowl.caddyfile.jinja
     dest: "{{ evilwoods_caddy_volume_service_path }}/kitchenowl.caddyfile"
     mode: "0644"
   notify: Restart caddy
