--- a/evilwoods-server/ansible/roles/ntfy/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/ntfy/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: "Copy quadlet file. {{ ntfy_app_name }}"
   ansible.builtin.template:
-    src: "{{ ntfy_app_name }}.container.j2"
+    src: "{{ ntfy_app_name }}.container.jinja"
     dest: "{{ evilwoods_quadlet_path }}/{{ ntfy_app_name }}.container"
     mode: "0644"
   notify:
@@ -8,7 +8,7 @@
 
 - name: "Copy caddyfile. {{ ntfy_app_name }}"
   ansible.builtin.template:
-    src: "{{ ntfy_app_name }}.caddyfile.j2"
+    src: "{{ ntfy_app_name }}.caddyfile.jinja"
     dest: "{{ evilwoods_caddy_volume_service_path }}/{{ ntfy_app_name }}.caddyfile"
     mode: "0644"
   notify:
