--- a/evilwoods-server/ansible/group_vars/evilwoods.yml
+++ b/evilwoods-server/ansible/group_vars/evilwoods.yml
@@ -10,12 +10,14 @@ evilwoods_domain_name: test.evilwoods.net
 evilwoods_caddy_volume_path: "{{ evilwoods_data_path }}/caddy"
 evilwoods_caddy_volume_config_path: "{{ evilwoods_caddy_volume_path }}/config"
 evilwoods_caddy_volume_service_path: "{{ evilwoods_caddy_volume_config_path }}/services"
-evilwoods_container_network: evilcloud
-
 evilwoods_nextcloud_data_volume: "{{ evilwoods_data_path }}/nextcloud/data"
 
+evilwoods_container_network: evilcloud
 evilwoods_container_subnet_prefix: "10.200.0"
 evilwoods_container_subnet: "{{ evilwoods_container_subnet_prefix }}.0/24"
 evilwoods_container_gateway: "{{ evilwoods_container_subnet_prefix }}.1"
 evilwoods_container_ip_range: "{{ evilwoods_container_subnet_prefix }}.100-{{ evilwoods_container_subnet_prefix }}.200"
 evilwoods_caddy_ip: "{{ evilwoods_container_subnet_prefix }}.2"
+
+# TODO: minimize hardcoded values in container names
+evilwoods_container_name_prefix: quadlet-
